feat: add cargo build & test hooks

--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -20,3 +20,17 @@
   args: ["--", "-D", "warnings"]
   types: [rust]
   pass_filenames: false
+- id: test
+  name: test
+  description: Run tests with cargo test
+  entry: cargo test
+  language: system
+  types: [rust]
+  args: ["--all-targets", "--", "--nocapture", "--test-threads=1", "--test"]
+- id: build
+  name: build
+  description: Build using cargo build
+  language: system
+  types: ["rust"]
+  entry: cargo build
+  pass_filenames: false
